styles/main.css
/* ... */
::selection {
  background-color: /*$highlight.background-color*/ #9EAB2D;
  color: /*$highlight.color*/ #FFFFFF;
}

/* messaging */
div.messageQuote {
  margin: 2px;
  padding-left: 10px;
  border-left: 2px solid /*$sheet.margin.color*/ #BBB9B0;
  color: /*$sheet.margin.color*/ #BBB9B0;
}

/******************************************************************************
   Form Controls - Refactoring
******************************************************************************/
#workarea form.dialogSizeXSmall table.dialog td.caption {
  min-width: 40px;
  width: 40px;
}
#workarea form.dialogSizeSmall table.dialog td.caption {
  min-width: 50px;
  width: 50px;
}
#workarea form.dialogSizeLarge table.dialog td.caption {
  min-width: 200px;
  width: 200px;
}
form.dialog .buttons {
  text-align: right;
  clear: both;
}
form.dialog .buttonsBottom {
  border-top: 1px solid /*$border.inset.color*/ #BBB9B0;
  margin-top: 2px;
}
form.dialog div.buttonsBottom .buttonsArtWork {
  border-top: 1px solid /*$border.raised.color*/ #FFFFFF;
  padding: 2px;
}
form.dialog .buttonsTop {
  border-bottom: 1px solid /*$border.raised.color*/ #FFFFFF;
  margin-bottom: 2px;
}
form.dialog .buttonsTop .buttonsArtWork {
  border-bottom: 1px solid /*$border.inset.color*/ #BBB9B0;
  padding: 2px;
}
form.dialog .buttons .button {
  border: 1px solid /*$border.raised.color*/ #FFFFFF;
  border-bottom-color: /*$border.inset.color*/ #BBB9B0;
  border-right-color: /*$border.inset.color*/ #BBB9B0;
  background-color: /*$workarea.background-color*/ #EAE9E6;
  color:  /*$workarea.color*/ #000000;
  cursor: pointer;
  font-size: 13px;
  line-height: 17px;
  height: 21px;
  vertical-align: bottom;
  padding: 0 4px;
  margin: 0;
  box-sizing: border-box;
  font-family: sans-serif;
}
form.dialog .buttons a.button {
  text-decoration: none;
  line-height: 19px;
}
form.dialog .buttons .left {
  float: left;
}
form.dialog .buttons .right {
  float: right;
}
form.dialog .scaleable {
  width: 100%;
}
form.dialog .caption a {
  color: /*$workarea.color*/ #000000;
  text-decoration: none;
}
form.dialog .caption.mandatory span.text:after {
  content: ' *';
}
form.dialog .hint {
  font-size: 11px;
  padding: 1px;
}
form.dialog .hintText {
  font-size: 14px;
  padding: 2px;
  border: 1px dashed /*$border.inset.color*/ #BBB9B0;
  background-color: /*$input.background-color*/ #FFFFFF;
  color: /*$input.disabled.color*/ #555753;
}
form.dialog a.hintSwitch {
  cursor: pointer;
}
form.dialog img.hintMarker  {
  margin: 3px;
  float: right;
}

div.dialogCheckboxes div.option,
div.dialogRadio div.option {
  display: inline-block;
}
/* popIn - lightbox with iframe */
.popIn {
  display: none;
}

/* context aware fields */
table.dialogField {
  width: 100%;
  border-collapse: collapse;
}
table.dialogField td {
  margin: 0;
  padding: 0;
  line-height: 1em;
}
table.dialogField .field {
  width: 100%;
}
table.dialogField .action span.information {
  padding: 0;
  margin: 0 1em;
}
table.dialogField .action input {
  margin-right: 0.2em;
}
table.dialogField .action input.filter {
  width: 8em;

}
table.dialogField .action button.icon {
  border: none;
  padding: 0;
  margin: 0 1em;
  width: 24px;
  cursor: pointer;
}
table.dialogField .action button.icon img {
  border: none;
  margin: auto;
  margin-top: 1px;
  padding: 0;
  width: 16px;
  height: 16px;
}
table.dialogField .information {
  font-size: 12px;
  line-height: 20px;
  padding: 4px 0;
  color: /*$dialog.color*/ #000000;
  overflow: hidden;
  padding-top: 0;
}
table.dialogField .information .icon {
  float: left;
  height: 48px;
  line-height: 48px;
  margin: 0.2em;
  margin-right: 1em;
  text-align: center;
  width: 48px;
}
table.dialogField .information img {
  display: inline;
  max-height: 48px;
}
table.dialogField .information .title {
  font-weight: bold;
  padding: 0.2em;
}
table.dialogField .information .description {
  font-weight: normal;
  padding: 0.2em;
}

/* dialog control buttons (context buttons) */
div.dialogControlButtons {
  float: right;
}
div.dialogControlButtons img {
  margin: 0.2em;
  cursor: pointer;
}
div.dialogControlButtons button img {
  margin: 0.2em 0 0 0;
  cursor: pointer;
}
.dialogField .suggest ul {
  margin: 0;
  padding: 0;
  position: relative;
  top: 0;
  background: #fff;
  list-style: none;
  border: 1px solid #BBB9B0;
  border-top: none;
}
.dialogField .suggest a {
  display: block;
  padding: 5px;
}
.dialogField .suggest a:hover {
  background: #9EAB2D;
}

/** old js field context elements */

div.dialogCounterLabel {
  font-size: 12px;
  line-height: 20px;
  padding: 0 3px;
}

